fix restore presentation btn overlap on mobile for presenter

--- a/bigbluebutton-html5/imports/ui/components/actions-bar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/actions-bar/styles.scss
@@ -1,5 +1,9 @@
 @import "/imports/ui/stylesheets/variables/_all";
 
+:root {
+  --mobile-swap-offset: 3.5rem;
+}
+
 .actionsbar,
 .center,
 .right {
@@ -55,6 +59,12 @@
 .centerWithActions {
   @include mq($xsmall-only) {
     justify-content: flex-end;
+  }
+}
+
+.mobileLayoutSwapped {
+  @include mq($xsmall-only) {
+    padding-right: var(--mobile-swap-offset);
   }
 }
 
